Convert to CMake.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-                         David's Version Control
+                         David's Versioning System
 
 This project aims to be a Distributed Version Control System similar to GIT
 but with a SANE command line interface (CLI).
